apps/apps-dev/nextcloud/extras/ingress-pub.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-public
spec:
  ingressClassName: traefik-pub
  rules:
    - host: drive.wheezy.fr
      http:
        paths:
          - {
              path: /s/,
              pathType: Prefix,
              backend:
                &svc { service: { name: nextcloud, port: { number: 8080 } } },
            }
          - { path: /index.php/s/, pathType: Prefix, backend: *svc }
          - { path: /apps/, pathType: Prefix, backend: *svc }
          - { path: /core/, pathType: Prefix, backend: *svc }
          - { path: /themes/, pathType: Prefix, backend: *svc }
          - { path: /dist/, pathType: Prefix, backend: *svc }
          - { path: /public.php/, pathType: Prefix, backend: *svc }
